src/test/resources/org/rust/lang/core/parser/fixtures/ill-formed/impl_body.rs
impl T for S {
    fn foo()
}
